--- a/pom.xml
+++ b/pom.xml
@@ -217,10 +217,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<forkCount>3</forkCount>
-					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-					<forkedProcessExitTimeoutInSeconds>300</forkedProcessExitTimeoutInSeconds>
+					<useSystemClassLoader>false</useSystemClassLoader>
+<!--					<forkCount>3</forkCount>-->
+<!--					<reuseForks>true</reuseForks>-->
+<!--					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
+<!--					<forkedProcessExitTimeoutInSeconds>300</forkedProcessExitTimeoutInSeconds>-->
 				</configuration>
 			</plugin>
 		</plugins>
