--- a/cloudbuild-deploy.yaml
+++ b/cloudbuild-deploy.yaml
@@ -32,7 +32,7 @@ steps:
 
   - id: DEPLOY
     name: 'maven:3.6-jdk-14'
-    args: ['mvn' , '-B', 'deploy', '-s', '.mvn/settings.xml', '-DforkCount=3', '-DreuseForks=true']
+    args: ['mvn' , '-B', 'deploy', '-s', '.mvn/settings.xml']
     volumes:
     - name: user.home
       path: /root
@@ -50,8 +50,6 @@ steps:
     - "-B"
     - "-Dmaven.test.skip=true"
     - "-Ddocker.image.prefix=gcr.io/$PROJECT_ID"
-    - "-DforkCount=3"
-    - "-DreuseForks=true"
     volumes:
     - name: user.home
       path: /root
