used spring data elastic search hots

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 spring:
   data:
+    elasticsearch:
+      client:
+        reactive:
+          endpoints: localhost:9200
     cassandra:
       keyspace-name: ceres
       schema-action: create_if_not_exists
