--- a/pom.xml
+++ b/pom.xml
@@ -142,9 +142,13 @@
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-elasticsearch</artifactId>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>-->
+<!--		</dependency>-->
 
 <!--		<dependency>-->
 <!--			<groupId>co.elastic.clients</groupId>-->
@@ -213,17 +217,15 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<useSystemClassLoader>false</useSystemClassLoader>
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-surefire-plugin</artifactId>-->
+<!--				<configuration>-->
 <!--					<forkCount>3</forkCount>-->
 <!--					<reuseForks>true</reuseForks>-->
-<!--					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
-<!--					<forkedProcessExitTimeoutInSeconds>300</forkedProcessExitTimeoutInSeconds>-->
-				</configuration>
-			</plugin>
+<!--					<argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
 		</plugins>
 	</build>
 
