--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -31,8 +31,15 @@ ceres:
   delayed-hashes-cache-ttl: 10s
   delayed-timeslot-cache-ttl: 10s
   downsample-delay-factor: 1.2
+  elastic-search-index-name: metrics
+  elastic-search-host: localhost
+  elastic-search-port: 9200
 spring:
   data:
+    elasticsearch:
+      client:
+        reactive:
+          endpoints: localhost:9200
     cassandra:
       local-datacenter: datacenter1
       connection:
@@ -45,5 +52,11 @@ management:
 logging:
   level:
     com.rackspace.ceres.app: debug
+    org:
+      springframework:
+        data:
+          elasticsearch:
+            client:
+              WIRE: trace
   file:
     name: ceres-application.log
