--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -54,4 +54,4 @@ steps:
 
 options:
     pool:
-      name: 'projects/ceres-dev-222017/locations/us-east-1/workerPools/test'
+      name: 'projects/$WORKERPOOL_PROJECT_ID/locations/$REGION/workerPools/test'
