--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -25,9 +25,8 @@ ceres:
   ingest-start-time: 7d
   ingest-end-time: 1d
   elastic-search-index-name: metrics
-  elasticsearch:
-    host: localhost
-    port: 9200
+  elastic-search-host: localhost
+  elastic-search-port: 9200
 management:
   server:
     port: 8082
