--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -3,7 +3,7 @@ spring:
     elasticsearch:
       client:
         reactive:
-          endpoints: localhost:9200
+          endpoints: ""
     cassandra:
       contact-points: ""
       request:
@@ -25,8 +25,8 @@ ceres:
   ingest-start-time: 7d
   ingest-end-time: 1d
   elastic-search-index-name: metrics
-  elastic-search-host: localhost
-  elastic-search-port: 9200
+  elastic-search-host: ""
+  elastic-search-port: ""
 management:
   server:
     port: 8082
