have commented out notNull from es host and port.

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -26,7 +26,7 @@ ceres:
   ingest-end-time: 1d
   elastic-search-index-name: metrics
   elastic-search-host: ""
-  elastic-search-port: ""
+  elastic-search-port: 9200
 management:
   server:
     port: 8082
