--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -8,8 +8,8 @@ spring:
       contact-points: ""
       request:
         timeout: 5s
-  main:
-    allow-bean-definition-overriding: true
+#  main:
+#    allow-bean-definition-overriding: true
 ceres:
   downsample:
     initialProcessingDelay: 1s
