--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -8,8 +8,8 @@ spring:
       contact-points: ""
       request:
         timeout: 5s
-#  main:
-#    allow-bean-definition-overriding: true
+  main:
+    allow-bean-definition-overriding: true
 ceres:
   downsample:
     initialProcessingDelay: 1s
@@ -30,11 +30,3 @@ ceres:
 management:
   server:
     port: 8082
-logging:
-  level:
-    org:
-      springframework:
-        data:
-          elasticsearch:
-            client:
-              WIRE: trace
