enabled pool options to cloudbuild.yaml

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -52,6 +52,6 @@ steps:
     - name: user.home
       path: /root
 
-#options:
-#    pool:
-#      name: 'projects/ceres-dev-222017/locations/us-east1/workerPools/test'
+options:
+    pool:
+      name: 'projects/ceres-dev-222017/locations/us-east1/workerPools/test'
