--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -30,3 +30,12 @@ ceres:
 management:
   server:
     port: 8082
+logging:
+  level:
+    com.rackspace.ceres.app: debug
+    org:
+      springframework:
+        data:
+          elasticsearch:
+            client:
+              WIRE: trace
