added test case for DownsampleJobProcessor

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,4 +1,6 @@
 spring:
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchDataAutoConfiguration
   data:
     elasticsearch:
       client:
@@ -20,6 +22,7 @@ ceres:
       - width: 1h
         ttl: 1d
         partitionWidth: 1h
+    partitions: 2
   tag-filter: exclude
   tag-value-limit: 10
   ingest-start-time: 7d
