--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -5,7 +5,7 @@ spring:
     elasticsearch:
       client:
         reactive:
-          endpoints: ""
+          endpoints: localhost:9200
     cassandra:
       contact-points: ""
       request:
