changed index with alias name in es, added es scripts.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -31,7 +31,7 @@ ceres:
   delayed-hashes-cache-ttl: 10s
   delayed-timeslot-cache-ttl: 10s
   downsample-delay-factor: 1.2
-  elastic-search-index-name: metrics
+  elastic-search-alias: metrics-metadata
   elastic-search-host: localhost
   elastic-search-port: 9200
 spring:
